roles/k8s_immich/files/immich_ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: immich-proxy
  namespace: immich-system
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  rules:
  - host: immich.hitesh.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: immich-server
            port:
              number: 3001
  ingressClassName: nginx
